# Autofilm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Autofilm/: CMakeLists.txt
Autofilm/src/: App.cpp  App.h  Autofilm.h  Core.h  EntryPoint.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h  afpch.h  autofilmpch.cpp  autofilmpch.h
Autofilm/src/Core/: App.cpp  App.h  Core.h  EntryPoint.h  File.cpp  File.h  Log.cpp  Log.h  OpenGLWindow.cpp  OpenGLWindow.h  ThreadPool.h  Window.h  WindowManager.cpp
Autofilm/src/Events/: AllEvents.h  Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
Autofilm/src/OpenGL/: OpenGLAPI.cpp  OpenGLAPI.h  OpenGLWindow.cpp  OpenGLWindow.h
Autofilm/src/Renderer/: IRenderable.h  RenderAPI.h  Renderer.cpp  Renderer.h
Autofilm/src/Scene/: Node.h  Scene.h
Autofilm/src/Shaders/shaders/: compileShaders.bat  gradient.comp  triangle.vert
Autofilm/src/Video/: VideoPlayer.h
Autofilm/src/Vulkan/: VulkanAPI.cpp  VulkanAPI.h  VulkanUtils.cpp  VulkanUtils.h  VulkanWindow.cpp  VulkanWindow.h  VulkanWindowManager.cpp  VulkanWindowManager.h
apps/emptyExample/: CMakeLists.txt
apps/emptyExample/src/: emptyExample.cpp
oldCmakelists/: CMakeLists.txt
